# crucible-lite

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  ONBOARDING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: agent-updater.md  api-reviewer.md  attorney-A.md  attorney-B.md  bill-drafter.md  code-reviewer.md  constitution-auditor.md  doc-reviewer.md  hw-advisor.md  judicial-clerk.md  package-manager.md  plotter.md  police.md  regression-runner.md  simulator-operator.md  stage-compactor.md  sw-advisor.md  uart-reader.md
.claude/commands/: code-review.md  doc-review.md  draft-bill.md  gov-audit.md  governance.md  hear.md  hw-advisor.md  plot-evidence.md  plot-profile.md  plot.md  session.md  spec.md  sw-advisor.md  toolchain.md  wiki.md
.claude/hooks/: article1_check.py  bash_write_guard.py
.claude/toolchain/: boards.json
.githooks/: pre-commit
.github/workflows/: constitution-check.yml
crucible/: __init__.py  cli.py
crucible/checks/: __init__.py  article_i.py  corpus.py  runner.py  stage_gate.py
crucible/corpus/: __init__.py  graph.py  query.py
crucible/db/: conn.py  migrate.py  schema.sql
crucible/export/: redact.py
crucible/hybrid/: ollama_client.py  router.py
crucible/rag/: indexer.py  query.py
crucible/signal/: __init__.py  analysis.py  events.py  plot.py
docs/: knowledge_map.json  toolchain_config.md
scripts/: export-session.py  pre-commit  pre-push
templates/: .mcp.json  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  requirements.txt
(+72 files in other folders)
