[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-core"
version = "0.1.0"
description = "Constitutional governance framework for hardware development — Python infrastructure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "bleak>=0.21.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
include = ["crucible*"]
